--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_color_plugin: ^0.0.2
   url_launcher: ^5.0.2
+  cached_network_image: ^0.8.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
