--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   url_launcher: ^5.0.2
   cached_network_image: ^0.8.0
   flutter_swiper: ^1.1.6
+  http: ^0.12.0+2
+  shared_preferences: ^0.5.3+1
 
 dev_dependencies:
   flutter_test:
